# zkp_ecc

./: Cargo.toml  README.md  run_proofs.sh
docs/: getting_started.md  kickmix_file_format.md  kickmix_instruction_set.md  sp1_cluster_deployment_guide.md
docs/example_data/: iadd64_fuzzer.elf
docs/example_tools/example_fuzz/: Cargo.toml  example_fuzz.rs
docs/example_tools/example_sample/: Cargo.toml  example_sample.rs
docs/example_tools/example_zkp_fuzzer/: Cargo.toml  example_zkp_fuzzer.rs
docs/example_tools/example_zkp_prove/: Cargo.toml  example_zkp_prove.rs
docs/example_tools/example_zkp_verify/: Cargo.toml  example_zkp_verify.rs
lib/: Cargo.toml
lib/src/: circuit.rs  lib.rs  sim.rs  weierstrass_elliptic_curve.rs
lib/tests/: test_op.rs  test_sim.rs  test_weierstrass_elliptic_curve.rs
program/: Cargo.toml
program/src/: main.rs
proofs/: zkp_ecc-program
prover/: Cargo.toml  prove.rs
verifier/: Cargo.toml  verifier.rs
