[workspace]
members = [
    "lib",
    "program",
    "prover",
    "verifier",
    "docs/example_tools/example_fuzz",
    "docs/example_tools/example_sample",
    "docs/example_tools/example_zkp_fuzzer",
    "docs/example_tools/example_zkp_prove",
    "docs/example_tools/example_zkp_verify",
]
resolver = "2"
