[package]
name = "example_fuzz"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "example_fuzz"
path = "example_fuzz.rs"

[dependencies]
rand = "0.8"
ruint = "1.17.2"
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", tag = "patch-sha3-0.10.8-sp1-6.0.0" }
zkp_ecc-lib = { path = "../../../lib" }
